@@ -46,6 +46,7 @@ import test.dataprovider.issue2819.TestClassFailingRetrySample;
 import test.dataprovider.issue2819.TestClassSample;
 import test.dataprovider.issue2819.TestClassUsingDataProviderRetrySample;
 import test.dataprovider.issue2819.TestClassWithMultipleRetryImplSample;
+import test.dataprovider.issue2888.SkipDataProviderSample;
 
 public class DataProviderTest extends SimpleBaseTest {
 
@@ -511,6 +512,14 @@ public class DataProviderTest extends SimpleBaseTest {
     TestNG testng = create(test.dataprovider.issue217.AnotherTestClassSample.class);
     testng.run();
     assertThat(testng.getStatus()).isEqualTo(1);
+  }
+
+  @Test(description = "GITHUB-2888")
+  public void ensureTestNGSkipExceptionWillSkipTestWithDataProvider() {
+    TestNG testng = create(SkipDataProviderSample.class);
+    testng.propagateDataProviderFailureAsTestFailure();
+    testng.run();
+    assertThat(testng.getStatus()).isEqualTo(2);
   }
 
   @Test(description = "GITHUB-2255")
